<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_baseline_storefront_24"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/title_settings" />

</menu>