...
        style="@style/Heading1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hello"
        app:layout_constraintStart_toEndOf="@+id/tv_hello"
        app:layout_constraintTop_toTopOf="@+id/tv_hello" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:padding="0dp"
        app:icon="@drawable/ic_bx_qr_scan"
        app:iconGravity="textStart"
...
