<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_order_restaurant"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_order" />
    <item
        android:id="@+id/navigation_menu_restaurant"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_menu" />
    <item
        android:id="@+id/navigation_setting_restaurant"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/title_settings" />
</menu>